<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_for_item">

    <TextView
        android:id="@+id/medicineNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editQuantityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toEndOf="@+id/doseNum"
        app:layout_constraintTop_toTopOf="@+id/doseNum" />

    <TextView
        android:id="@+id/quantityNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/editQuantityTxt"
        app:layout_constraintTop_toTopOf="@+id/editQuantityTxt" />

    <TextView
        android:id="@+id/doseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/dose"
        app:layout_constraintStart_toEndOf="@+id/medicineNameTxt"
        app:layout_constraintTop_toTopOf="@+id/medicineNameTxt" />

    <TextView
        android:id="@+id/doseNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0_pills"
        app:layout_constraintStart_toEndOf="@+id/doseTxt"
        app:layout_constraintTop_toTopOf="@+id/doseTxt" />

    <TextView
        android:id="@+id/daysTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/days"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/timeOnDayTxt" />

    <TextView
        android:id="@+id/daysVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/every_day"
        app:layout_constraintStart_toEndOf="@+id/daysTxt"
        app:layout_constraintTop_toTopOf="@+id/daysTxt" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_on_day"
        app:layout_constraintStart_toStartOf="@+id/medicineNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/medicineNameTxt" />

    <TextView
        android:id="@+id/timeOnDayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/morning"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="41dp"
        android:layout_height="27dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/ic_menu_manage"
        app:layout_constraintStart_toEndOf="@+id/websiteBtn"
        app:layout_constraintTop_toTopOf="@+id/websiteBtn" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="52dp"
        android:layout_height="27dp"
        android:background="@android:drawable/ic_delete"
        app:layout_constraintStart_toEndOf="@+id/editBtn"
        app:layout_constraintTop_toTopOf="@+id/editBtn" />

    <Button
        android:id="@+id/websiteBtn"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:text="Go To Website"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/daysTxt"
        app:layout_constraintTop_toBottomOf="@+id/daysVal" />
</androidx.constraintlayout.widget.ConstraintLayout>